--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.4.0 # Déplacez-le ici depuis dev_dependencies
+  flutter_native_splash: ^2.4.0 
+  hive: ^2.2.3         # Stockage local rapide
+  hive_flutter: ^1.1.0 # Utilitaires pour Flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8    # Outil de génération de code
+  hive_generator: ^2.0.1  # Permet de générer les adaptateurs Hive
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
