feat: Implémentation complète de l'Authentification et du Profil Utilisateur, et unification des Vues Principales
Ce commit majeur intègre l'ensemble des travaux réalisés depuis l'établissement de la navigation horizontale, apportant une structure complète pour la gestion de l'état de l'utilisateur, des tâches et des sessions de travail.

Fonctionnalités et Améliorations Clés :

* **Authentification et Profil (Hive):** Mise en place des modèles UserAuth et UserProfile et des méthodes CRUD associées dans HiveDataStore (loginUser, signupUser, saveUserProfile).
* **Vue Profil (ProfileView):** Implémentation d'une vue réactive affichant l'état de connexion, le profil utilisateur, et permettant l'accès aux écrans d'authentification et d'édition.
* **Création/Édition Profil (ProfileCreateView):** Ajout de la logique de formulaire unifiée pour la Connexion, l'Inscription et l'Édition du profil.
* **Compatibilité Multiplateforme (Image):** Correction des erreurs de compilation Web (kIsWeb) dans ProfileCreateView pour la sélection d'images (utilisation de XFile et NetworkImage pour le Web, File pour le Mobile).
* **Gestion de l'État :** Utilisation des ValueListenableBuilder sur les Boxes Hive (UserAuth, UserProfile) pour un rafraîchissement automatique et sans erreur des vues lors de la connexion/déconnexion/mise à jour.
* **Navigation :** Mise en place du MainWrapper gérant les 4 écrans principaux via la BottomNavigationBar, et correction des redirections post-authentification (pushNamedAndRemoveUntil('/')).
* **Structure des Vues :** Suppression des boutons de retour inutiles dans les vues principales (TaskView, WorkSessionView, ProfileView) qui sont maintenant accessibles via la barre de navigation.
* **Nettoyage du DataStore :** Standardisation des méthodes de récupération et de sauvegarde de profil (getLoggedInUserProfile).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   # Pour ouvrir les liens externes (GitHub)
   url_launcher: ^6.3.2 
-
+  image_picker: ^1.0.4 # Assurez-vous d'avoir la dernière version stable
   # Pour l'icône GitHub (FaIcon)
   font_awesome_flutter: ^10.12.0
 
